--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="section" id="profile">
         <h1 class="section-title">Hanna Davidovich</h1>
         <img src="assets/images/hanna's_photo.jpg" alt="Hanna's_photo" class="profile-image">
-        <p>32y.o.</p>
+        <p>34y.o.</p>
         <p>Belarus, Baranovichi</p>
       </section>
       <section class="section" id="contacts">
@@ -89,10 +89,10 @@
         <a href="https://github.com/Nanu6ka" class="footer-link"><img class="footer-image" src="assets/images/GitHub.png" alt="github-link"></a>
       </div>
       <div class="footer-item">
-        <h2 class="footer-title">2023</h2>
+        <h2 class="footer-title">2025</h2>
       </div>
       <div class="footer-item">
-        <a href="https://rs.school/js/" class="footer-link"><img class="footer-image" src="assets/images/rs_school_js.svg" alt="rs-school-link"></a>
+        <a href="fix: trail whitespaces" class="footer-link"><img class="footer-image" src="assets/images/rs_school_js.svg" alt="rs-school-link"></a>
       </div>
     </div>
   </footer>
