fix: Update index.html

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
       <div class="footer-item">
         <h2 class="footer-title">2025</h2>
       </div>
-      <div class="footer-item">
-        <a href="https://rs.school/courses/javascript-ru" class="footer-link"><img class="footer-image" src="assets/images/rs_school_js.svg" alt="rs-school-link"></a>
+      <div class="footer-item"><a href="https://rs.school/courses/javascript-ru" class="footer-link"><img class="footer-image" src="assets/images/rs_school_js.svg" alt="rs-school-link"></a>
       </div>
     </div>
   </footer>
